Bug 81214 - FILEOPEN: DOCX - Unable to import text after missing formula in footnotes
Summary: FILEOPEN: DOCX - Unable to import text after missing formula in footnotes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: Other All
: highest critical
Assignee: Not Assigned
URL:
Whiteboard: target:4.4.0 target:4.3.1 target:4.2.6
Keywords: bibisected, dataLoss, regression
Depends on:
Blocks: DOCX-Footnote-Endnote FastParser-regressions mab4.2
  Show dependency treegraph
 
Reported: 2014-07-11 07:55 UTC by Yousuf Philips (jay) (retired)
Modified: 2022-09-30 12:29 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-07-11 07:55:05 UTC
As mentioned in bug 80175 comment 3, if attachment 101279 [details] is loaded in 4.2 and above, all text in endnotes after the missing formula in endnote 43 arent being displayed, including the period right after the formula.

Attachment 101385 [details] shows how it looks in LibO 4.1 (left) and 4.2 (right).
Comment 1 Jorendc 2014-07-11 10:14:44 UTC
Reproducible, Version: 4.4.0.0.alpha0+
Build ID: f511a2915ed856f048fd7dd91fd9f7537b1e0479 Linux Mint 17 x64.
Comment 2 Michael Stahl 2014-07-11 18:34:38 UTC
broke between 4.2.0.1 and 4.2.0.2

regression from:

commit 59003de73eff0da22d01f2fd3cddc78bf3a3a3f8
Author: Michael Meeks <michael.meeks@collabora.com>
Date:   Fri Dec 20 16:18:48 2013 +0000

    fastparser: fix load regression
Comment 3 Michael Meeks 2014-07-11 19:01:28 UTC
How curious; presumably some debug in saveException / throwException would show us what's up there; I'll have a look ...
Comment 4 Michael Meeks 2014-07-11 19:04:33 UTC
And yet, interestingly no exception is thrown or saved in this case (according to gdb at least).
Comment 5 Michael Meeks 2014-07-11 19:07:08 UTC
Disabling threaded parsing also causes the same effect; most curious ! will try reverting my patch ...
Comment 6 Michael Meeks 2014-07-11 19:09:57 UTC
And indeed - reverting fixes it: more and more interesting =) perhaps gdb just lieth to me.
Comment 7 Michael Meeks 2014-07-11 19:27:13 UTC
The problem seems to be:

+        XML_StopParser( mpParser, /* resumable? */ XML_FALSE );

in the 'saveException' method; apparently we don't want to do this in some cases; I imagine some event handler fires an exception and we want to just carry on parsing - but which one ... most curious; will add some printfs =)
Comment 8 Michael Meeks 2014-07-11 19:47:27 UTC
The real problem is that footnote reading throws a ton of exceptions inside 'startElement' of the form:

unsatisfied query for interface of type com.sun.star.lang.XComponent!

=) but apparently the old parser was more tolerant of that; so perhaps we should be too - disabled stopping the XML parser immediately on that, and the missing footnotes are back.
Comment 9 Commit Notification 2014-07-11 19:50:28 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9af1cbf233620e7c9d3fa9d8f55ab0e05dca6c84

fdo#81214 - tolerate exceptions thrown inside XFastParser callbacks.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2014-07-13 20:22:22 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7cd2871b594ff49267b1fe8c3100e1ca717928c6&h=libreoffice-4-3

fdo#81214 - tolerate exceptions thrown inside XFastParser callbacks.


It will be available in LibreOffice 4.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2014-07-14 12:04:49 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b8d8ec78c3e242d94963beef5aff6335f047ef59&h=libreoffice-4-2

fdo#81214 - tolerate exceptions thrown inside XFastParser callbacks.


It will be available in LibreOffice 4.2.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2014-07-15 11:02:00 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-4-2-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=779c4cf10a9fd7e6d3c165d709531946cf68939d&h=libreoffice-4-2-6

fdo#81214 - tolerate exceptions thrown inside XFastParser callbacks.


It will be available already in LibreOffice 4.2.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Robinson Tryon (qubit) 2015-12-17 08:26:05 UTC Comment hidden (obsolete)