fdo#81214 - tolerate exceptions thrown inside XFastParser callbacks.

Not an ideal solution; ideally we should not throw the exceptions,
and stop the parser as soon as something bad like this happens; but
hopefully exception throwing is reasonable exceptional.

Change-Id: If619592533b2929c671e2b03eb8a83480bd92c54
Reviewed-on: https://gerrit.libreoffice.org/10289
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>